2013-04-08  Luke Owncloud

	* support charset definition in content-type of vcard (making compatiable with owncloud 5)


2012-12-05  Luke Owncloud

	* Removed escaping of colons of VCARDs (not required according to http://tools.ietf.org/html/rfc2426#page-37)
	* add GIT version to XPI
	* fixed incompatability with Windows during handling contact photo files.
	* added option: "abot sync". Useful if sync does not finish on its on (usually indicates some internals error)
	* error output to Thunderbird's error console for severe errors.
	* force full sync on next sync cycle (checkServerUpdates) after a contact was deleted.
	* allow user to remove properties from contact in contact list

2012-04-20  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* components/SOGoConnectorAutocompleteSearch.js: restored and
	slightly adapted component for TB 10.

	* chrome/content/sogo-connector/common/common-dav.js: removed
	obsolete module.

2012-04-13  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/calendar/calendars-list-overlay.js:
	new module.
	(reinitCalendarCache): new function enabling the emptying of the
	calendar cache, followed by a restart of Thunderbird.

2012-03-06  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/general/vcards.utils.js
	(photoContent): instantiate the file from the URI in a way that is
	platform independent, by creating and using an nsIURI object.

2012-02-22  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/calendar/calendar-event-dialog-overlay.js:
	new overlay for calendar-event-dialog, that automatically sets the
	event or task classification based on the preferences defined in
	the preferences mentionned below.

	* chrome/content/sogo-connector/calendar/preferences/general-overlay.xul:
	new preference overlay (overrides calendar.general) that adds
	preference widgets for the default classification of events and todos.

2012-02-10  Wolfgang Sourdeau  <wsourdeau@inverse.ca>