@@ -1,0 +1,6 @@
+<!ENTITY calendar.preferences.general.classification.caption
+"Výchozí nastavení soukromí">
+<!ENTITY calendar.preferences.general.default-events-classification.label
+"Události:">
+<!ENTITY calendar.preferences.general.default-todos-classification.label
+"Úkoly:">
