@@ -5,29 +5,17 @@
   <Description about="urn:mozilla:install-manifest"
     em:name="Inverse SOGo Connector"
     em:id="sogo-connector@inverse.ca"
-    em:version="17.0.6"
+    em:version="24.0.2"
     em:description="A DAV plugin for keeping addressbooks and events in sync"
     em:iconURL="chrome://sogo-connector/skin/addressbook/sogo.png"
     em:creator="Inverse &lt;support@inverse.ca>"
     em:homepageURL="http://sogo.nu/downloads/frontends.html">
     <em:developer>Inverse &lt;support@inverse.ca></em:developer>	  
-    <em:contributor>Chris Bryant</em:contributor>
-    <em:contributor>Damon Hart</em:contributor>
-    <em:contributor>Dominik Gehl</em:contributor>
-    <em:contributor>Helge Hess</em:contributor>	  
-    <em:contributor>Ludovic Marcotte</em:contributor>
-    <em:contributor>Mark Banner for the inputs on the address book architecture http://www.standard8.plus.com/</em:contributor>
-    <em:contributor>Neil Deakin</em:contributor>
-    <em:contributor>Paolo Kaosmos</em:contributor>	  
-    <em:contributor>Raffael Luthiger for the German translation</em:contributor>	  
-    <em:contributor>Ralf Becker for eGroupware integration</em:contributor>
-    <em:contributor>Regis Balzard (for the chocolate)</em:contributor>
-    <em:contributor>Wilfried Goesgens</em:contributor>
     <em:targetApplication>
       <Description>
         <em:id>{3550f703-e582-4d05-9a08-453d09bdfdc6}</em:id>
-        <em:minVersion>17.0</em:minVersion>
-        <em:maxVersion>17.*</em:maxVersion>
+        <em:minVersion>24.0</em:minVersion>
+        <em:maxVersion>24.*</em:maxVersion>
       </Description>
     </em:targetApplication>
   </Description>
